Fixed spacing, removed old files

--- a/styles/index2.css
+++ b/styles/index2.css
@@ -15,11 +15,13 @@ body {
 
 #gameArea {
   z-index: 1001;
-
+  line-height: 5px;
   position: absolute;
   top: 10px;
-  background-color: white;
+  background-color: rgb(250, 192, 0);
   border-radius: 5px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 .flipIn {
@@ -72,8 +74,6 @@ header {
   border-style: solid;
   overflow: hidden;
   margin-bottom: 10px;
-
-
 }
 
 #how-tos {
@@ -92,7 +92,6 @@ header {
   cursor: pointer;
   position: absolute;
   right: 4px;
-
 }
 
 #js-how-to-button:hover {
@@ -148,7 +147,6 @@ a {
   border-color: rgb(137, 136, 136);
   margin: 5px;
   background-color: rgb(0, 255, 234);
-
   box-shadow: 3px 3px 4px 1px rgba(0, 0, 0, 0.5);
 }
 
@@ -162,10 +160,7 @@ a {
   box-shadow: 3px 3px 4px 1px rgba(0, 0, 0, 0.5);
 }
 
-
-
 .correct {
-
   background-color: rgba(0, 255, 0, .5);
 }
 
@@ -231,7 +226,6 @@ a {
   }
 }
 
-
 #score {
   margin-top: 0px;
   margin-bottom: 0px;
@@ -260,7 +254,7 @@ a {
 }
 
 #guessStock-price {
-  color: rgb(239, 195, 0);
+  color: black;
 }
 
 #game-container {
@@ -277,10 +271,7 @@ a {
   border-width: 7px;
   border-radius: 10px;
   padding: 5px;
-
-
 }
-
 
 .game-container::before {
   content: "";
@@ -288,7 +279,6 @@ a {
   z-index: -2;
   /* Push the pseudo-element behind the game container */
 }
-
 
 #mask {
   position: fixed;
@@ -302,10 +292,7 @@ a {
   align-items: center;
   justify-content: center;
   z-index: 0;
-
 }
-
-
 
 .overlay {
   position: absolute;
@@ -406,7 +393,6 @@ a {
   transform: translate(11px, 0px);
 }
 
-
 #js-new-game-button:hover {
   background-color: rgb(255, 213, 1);
 }
@@ -470,31 +456,34 @@ a {
   padding-top: 2px;
   text-align: center;
   overflow-y: auto;
+
 }
 
+::-webkit-scrollbar {
+  width: 10px;
+}
 
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
 
-
-
-
-
-
-
+::-webkit-scrollbar-thumb {
+  background: rgb(255, 217, 0);
+  border-radius: 10px;
+}
 
 @media screen and (max-width: 768px) {
-
   #score {
     margin-top: 0px;
     margin-bottom: 0px;
     height: 0px;
   }
 
-
   #score-item {
     height: 20px;
     width: 100%;
   }
-
 
   #game-container {
     flex-direction: column;
@@ -603,7 +592,6 @@ a {
     display: none;
 
   }
-
 
   #info-text {
     margin: 12px;
